--- a/template/index.html
+++ b/template/index.html
@@ -1,179 +1,169 @@
 <!DOCTYPE html>
-<html lang="en" class="full-height">
+<html lang="en">
 
 <head>
-    <!-- required meta tags -->
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie-edge">
-    <title>WEcoonect web app</title>
 
-    <!-- bootstrap css -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
         crossorigin="anonymous">
-    <!--Custom Css-->
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
-
 </head>
 
 <body>
-    <!--site body begins -->
-    <!--Main Navigation-->
+    <header class="sticky-top">
+        <nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a id="navBarAppTitle" class="navbar-brand" href="#">This will be changed to the APP_TITLE by main.js</a>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="#">Home
+                        <span class="sr-only">(current)</span>
+                    </a>
+                    <a class="nav-item nav-link" href="#">Sign In</a>
+                    <a class="nav-item nav-link" href="#">Sign Up</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 id="jumbotronMainText" class="h1 text-center">Connecting business</h1>
+            <h2 id="jumbotronSubElements" class="text-center lead">
+
+            </h2>
+        </div>
+    </div>
 
 
-    <!--navbar-->
+    <main class="container-fluid">
+        <p class="col-md-12">WeConnect provides a platform that brings businesses and individuals together. This platform creates awareness for
+            businesses and gives the users the ability to write reviews about the businesses they have interacted with. </p>
 
-    <body>
-        <header class="sticky-top">
-            <nav class="navbar navbar-toggleable-sm navbar-inverse bg-inverse">
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <a id="navBarAppTitle" class="navbar-brand" href="#">This will be changed to the APP_TITLE by main.js</a>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link active" href="#">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
-                        <a class="nav-item nav-link" href="#">Sign In</a>
-                        <a class="nav-item nav-link" href="#">Sign Up</a>
+
+
+        <!-- carousel -->
+        <div id="carouselExampleIndicators" class="carousel slide" data-interval="3000" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                    <img class="d-block img-fluid" src="./images/image01.jpg" alt="First slide">
+                    <div class="carousel-caption d-none d-sm-block">
+                        <h2 class="jumboCaption1">People</h2>
+                        <p>We Connect</p>
                     </div>
                 </div>
-            </nav>
+                <div class="carousel-item">
+                    <img class="img-fluid" src="./images/image02.jpg" alt="Second slide">
 
-            <!--Intro Section-->
-        </header>
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1 id="jumbotronMainText" class="h1 text-center">Connecting business</h1>
-                <h2 id="jumbotronSubElements" class="text-center lead">
+                    <div class="carousel-caption d-none d-sm-block">
+                        <h2>Our Clients</h2>
+                        <p>We Listen</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="img-fluid" src="./images/image03.jpg" alt="Third slide">
+                    <div class="carousel-caption d-none d-sm-block">
+                        <h2>Your Vision</h2>
+                        <p>We See It</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="img-fluid" src="./images/image04.jpg" alt="fourth slide">
+                    <div class="carousel-caption d-none d-sm-block">
+                        <h2>Technology</h2>
+                        <p>We Have It</p>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
 
-                </h2>
+        <!-- carousel -->
+
+    </main>
+
+
+    <!--Footer-->
+    <footer class="pt-4 mt-4">
+
+        <!--Footer Links-->
+        <div class="container-fluid text-center text-md-left">
+            <div class="row">
+
+                <!--First column-->
+                <div class="col-md-6">
+                    <h5 id="footerAppTitle" class="text-uppercase">Footer Content</h5>
+                    <p>Connecting People... What are you waiting for?</p>
+                </div>
+                <!--/.First column-->
+
+                <!--Second column-->
+                <div class="col-md-6">
+                    <h5 class="text-uppercase">Useful Links</h5>
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="#!">Terms and Conditions</a>
+                        </li>
+                        <li>
+                            <a href="#!">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="#!">Contents Guidelines</a>
+                        </li>
+                        <li>
+                            <a href="#!">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--/.Second column-->
             </div>
         </div>
-        <!--Main Navigation-->
+        <!--/.Footer Links-->
+        <hr />
+        <!--Copyright-->
+        <div class="footer-copyright py-3 text-center">
+            <div class="container-fluid">
+                © 2018 Copyright:
+                <span id="copyright"> MDBootstrap.com </sp>
 
-        <!--Main Layout-->
-        <main class="container-fluid">
-            <p class="col-md-12">WeConnect provides a platform that brings businesses and individuals together. This platform creates awareness
-                for businesses and gives the users the ability to write reviews about the businesses they have interacted
-                with. </p>
-
-
-
-            <!-- carousel -->
-            <div id="carouselExampleIndicators" class="carousel slide" data-interval="3000" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselIndicators" data-slide-to="2"></li>
-                    <li data-target="#carouselIndicators" data-slide-to="3"></li>
-                </ol>
-                <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
-                        <img class="d-block img-fluid" src="./images/image01.jpg" alt="First slide">
-                        <div class="carousel-caption d-none d-sm-block">
-                            <h2 class="jumboCaption1">People</h2>
-                            <p>We Connect</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="img-fluid" src="./images/image02.jpg" alt="Second slide">
-
-                        <div class="carousel-caption d-none d-sm-block">
-                            <h2>Our Clients</h2>
-                            <p>We Listen</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="img-fluid" src="./images/image03.jpg" alt="Third slide">
-                        <div class="carousel-caption d-none d-sm-block">
-                            <h2>Your Vision</h2>
-                            <p>We See It</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img class="img-fluid" src="./images/image04.jpg" alt="fourth slide">
-                        <div class="carousel-caption d-none d-sm-block">
-                            <h2>Technology</h2>
-                            <p>We Have It</p>
-                        </div>
-                    </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
             </div>
+        </div>
+        <!--/.Copyright-->
 
-            <!-- carousel -->
+    </footer>
+    <!--/.Footer-->
 
-        </main>
-        <!--Footer-->
-        <footer class="pt-4 mt-4">
 
-            <!--Footer Links-->
-            <div class="container-fluid text-center text-md-left">
-                <div class="row">
 
-                    <!--First column-->
-                    <div class="col-md-6">
-                        <h5 id="footerAppTitle" class="text-uppercase">Footer Content</h5>
-                        <p>Connecting People... What are you waiting for?</p>
-                    </div>
-                    <!--/.First column-->
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 
-                    <!--Second column-->
-                    <div class="col-md-6">
-                        <h5 class="text-uppercase">Useful Links</h5>
-                        <ul class="list-unstyled">
-                            <li>
-                                <a href="#!">Terms and Conditions</a>
-                            </li>
-                            <li>
-                                <a href="#!">Privacy Policy</a>
-                            </li>
-                            <li>
-                                <a href="#!">Contents Guidelines</a>
-                            </li>
-                            <li>
-                                <a href="#!">Contact Us</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--/.Second column-->
-                </div>
-            </div>
-            <!--/.Footer Links-->
-            <hr />
-            <!--Copyright-->
-            <div class="footer-copyright py-3 text-center">
-                <div class="container-fluid">
-                    © 2018 Copyright:
-                    <span id="copyright"> MDBootstrap.com </span>
+    <!-- Custom  Javascript -->
+    <script src="./js/main.js"></script>
 
-                </div>
-            </div>
-            <!--/.Copyright-->
-
-        </footer>
-        <!--/.Footer-->
-        <!-- Optional JavaScript -->
-        <!-- Custom  Javascript -->
-        <script src="./js/main.js"></script>
-        <!-- Jquery First, then popper.js Bootstrap js. -->
-        <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
-            crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-            crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-     vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
-            crossorigin="anonymous"></script>
-
-    </body>
+</body>
 
 </html>
