--- a/template/index.html
+++ b/template/index.html
@@ -9,122 +9,184 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-    crossorigin="anonymous">
+        crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 
 <body>
-    
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
-            <a id="navBarAppTitle" class="navbar-brand weconnect" href="#">
-                <span class="we">We</span>Connect</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-    
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home
-                            <span class="sr-only">(current)</span>
-                        </a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false">
-                            <span class="weconnect">
-                                <span class="we">We</span>Connect</span> Business Listings
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-header">Top Performers</a>
-                            <a businessID="" class="dropdown-item text-capitalize" href="#">business 1</a>
-                            <a businessID="" class="dropdown-item text-capitalize" href="#">business 1</a>
-                            <a businessID="" class="dropdown-item text-capitalize" href="#">business 1</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Yellow Pages</a>
-    
-                        </div>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2 fluid" type="search" placeholder="search business" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-        </nav>
-    
-        <div class="jumbotron jumbotron-fluid">
-            <div class="justify-content-center row">
-                <span id="jumbotronMainText" class="h1 text-center col-12 no-gutters mx-auto"></span>
-                <span class="text-center">
-                    <span id="jumbotronSubText" class="jumbotronSubText align-middle"></span>
-                    <a class="btn text-capitalize jumbotronSubText font-underline" href="#">
-                        <u>join us</u>
+
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
+        <a id="navBarAppTitle" class="navbar-brand weconnect" href="#">
+            <span class="we">We</span>Connect</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home
+                        <span class="sr-only">(current)</span>
                     </a>
-                </span>
-            </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
+                        <span class="weconnect">
+                            <span class="we">We</span>Connect</span> Business Listings
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-header">Top Performers</a>
+                        <a businessID="" class="dropdown-item text-capitalize" href="#">business 1</a>
+                        <a businessID="" class="dropdown-item text-capitalize" href="#">business 1</a>
+                        <a businessID="" class="dropdown-item text-capitalize" href="#">business 1</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Yellow Pages</a>
+
+                    </div>
+                </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2 fluid" type="search" placeholder="search business" aria-label="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </div>
+    </nav>
 
-
-    <main class="container-fluid">
-        <p class="col-md-12">WeConnect provides a platform that brings businesses and individuals together. This platform creates awareness for
-            businesses and gives the users the ability to write reviews about the businesses they have interacted with. </p>
-
-
-
-        <!-- carousel -->
-        <div id="carouselIndicators" class="carousel slide" data-interval="3000" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselIndicators" data-slide-to="2"></li>
-                <li data-target="#carouselIndicators" data-slide-to="3"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
-                    <img class="d-block img-fluid" src="./images/fashion-image01.jpg" alt="First slide">
-                    <div class="carousel-caption d-none d-sm-block">
-                        <h2 class="jumboCaption1">People</h2>
-                        <p>We Connect</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="img-fluid" src="./images/image02.jpg" alt="Second slide">
-
-                    <div class="carousel-caption d-none d-sm-block">
-                        <h2>Our Clients</h2>
-                        <p>We Listen</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="img-fluid" src="./images/vacation-image.jpg" alt="Third slide">
-                    <div class="carousel-caption d-none d-sm-block">
-                        <h2>Your Vision</h2>
-                        <p>We See It</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="img-fluid" src="./images/image04.jpg" alt="fourth slide">
-                    <div class="carousel-caption d-none d-sm-block">
-                        <h2>Technology</h2>
-                        <p>We Have It</p>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="justify-content-center row">
+            <span id="jumbotronMainText" class="h1 text-center col-12 no-gutters mx-auto"></span>
+            <span class="text-center">
+                <span id="jumbotronSubText" class="jumbotronSubText align-middle"></span>
+                <a class="btn text-capitalize jumbotronSubText font-underline" href="#">
+                    <u>join us</u>
+                </a>
+            </span>
         </div>
+    </div>
 
-        <!-- carousel -->
 
-    </main>
+    <div class="container-fluid">
+        <div class="row">
+            <main class="container-fluid mb-3 col-md-8 order-md-4">
+                <p class="">
+                    <span class="lead">Welcome to
+                        <span class="weconnect">
+                            <span class="we">We</span>Connect</span>.</span> A platform that brings businesses and individuals together. This
+                    platform creates awareness for businesses and gives the users the ability to write reviews about the
+                    businesses they have interacted with. </p>
+
+                <!-- carousel -->
+                <div id="mainCarousel" class="carousel slide sticky-top" data-interval="3000" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#mainCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mainCarousel" data-slide-to="1"></li>
+                        <li data-target="#mainCarousel" data-slide-to="2"></li>
+                        <li data-target="#mainCarousel" data-slide-to="3"></li>
+                    </ol>
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="./images/fashion-image01.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-sm-block">
+                                <h2 class="jumboCaption1">People</h2>
+                                <p>We Connect</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="img-fluid" src="./images/image02.jpg" alt="Second slide">
+
+                            <div class="carousel-caption d-none d-sm-block">
+                                <h2>Our Clients</h2>
+                                <p>We Listen</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="img-fluid" src="./images/vacation-image.jpg" alt="Third slide">
+                            <div class="carousel-caption d-none d-sm-block">
+                                <h2>Your Vision</h2>
+                                <p>We See It</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="img-fluid" src="./images/image04.jpg" alt="Third slide">
+                            <div class="carousel-caption d-none d-sm-block">
+                                <h2>Technology</h2>
+                                <p>We Have It</p>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#mainCarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#mainCarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+
+                <!-- carousel -->
+            </main>
+
+            <aside class="col-md-2 order-md-1">
+                <h2 class="d-md-none h3 text-center p-1 mt-4 bg-dark colorWhite">
+                    Featured Businesses
+                </h2>
+                <div class="card text-center mb-2">
+                    <img class="card-img-top" src="./images/sample-business-image.jpg" alt="Business Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Business Name</h5>
+                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, magni ut. Aliquam, harum minima
+                            ea alias voluptatem non repudiandae! Animi inventore quidem nam dolorem totam id placeat qu</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                    <div class="card-footer text-muted">
+                        2 days ago
+                    </div>
+                </div>
+                <div class="card text-center mb-2">
+                    <img class="card-img-top" src="./images/sample-business-image.jpg" alt="Business Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Business Name</h5>
+                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, magni ut. Aliquam, harum minima
+                            ea alias voluptatem non repudiandae! Animi inventore quidem nam dolorem totam id placeat qu</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                    <div class="card-footer text-muted">
+                        2 days ago
+                    </div>
+                </div>
+            </aside>
+
+            <aside class="col-md-2 order-md-12">
+                <div class="card text-center mb-2">
+                    <img class="card-img-top" src="./images/sample-business-image.jpg" alt="Business Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Business Name</h5>
+                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, magni ut. Aliquam, harum minima
+                            ea alias voluptatem non repudiandae! Animi inventore quidem nam dolorem totam id placeat qu</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                    <div class="card-footer text-muted">
+                        2 days ago
+                    </div>
+                </div>
+                <div class="card text-center mb-2">
+                    <img class="card-img-top" src="./images/sample-business-image.jpg" alt="Business Image">
+                    <div class="card-body">
+                        <h5 class="card-title">Business Name</h5>
+                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur, magni ut. Aliquam, harum minima
+                            ea alias voluptatem non repudiandae! Animi inventore quidem nam dolorem totam id placeat qu</p>
+                        <a href="#" class="btn btn-primary">Go somewhere</a>
+                    </div>
+                    <div class="card-footer text-muted">
+                        2 days ago
+                    </div>
+                </div>
+            </aside>
+        </div>
+    </div>
 
 
     <!--Footer-->
